feat: receiver transactionals update

--- a/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
@@ -42,16 +42,12 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Ihr Mitgliedschafts- oder Unterstützungsbeitrag in der Höhe von CHF {{total}} ist weiterhin ausstehend.</p>
                     <p>
-                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht erhalten, gehen wir davon aus, dass Sie die Republik 
-                      nicht mehr lesen möchten, und deaktivieren Ihr Abo und Ihre Mitgliedschaft.
+                      Journalismus lebt nicht nur von Worten, sondern auch von Taten: Handeln Sie jetzt und zahlen Sie Ihren ausstehenden Abo-Beitrag. 
+                      Falls sich unsere Buchhaltung nicht irrt, ist der von Ihnen gewählte Beitrag in Höhe von CHF {{total}} nämlich weiterhin ausstehend.
                     </p>
                     <p>
-                      Doch so weit muss es nicht kommen.
-                    </p>
-                    <p>
-                      Es gibt eine bessere Alternative: sofort die Rechnung bezahlen und dabeibleiben!
+                      Unser Projekt ist auf Ihren Beitrag angewiesen.
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
@@ -74,6 +70,10 @@
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >.
+                    </p>
+                    <p>
+                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht erhalten, gehen wir davon aus, dass Sie die Republik 
+                      nicht mehr lesen möchten, und deaktivieren Ihr Abo.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
