--- a/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
@@ -42,15 +42,21 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Wir finden es grossartig, dass Sie die Republik unterstützen.</p>
+                    <p>Wir freuen uns sehr, dass Sie die Republik unterstützen möchten.</p>
                     <p>
-                      Nun hat sich allerdings unsere Buchhaltung mit dem Hinweis gemeldet, Ihr Mitgliedschafts-
-                      oder Unterstützungsbeitrag in der Höhe von CHF {{total}} sei noch ausstehend.
+                      Mit Ihrem neuen Abo erhalten Sie sechsmal pro Woche ein 
+                      unabhängiges und werbefreies digitales Magazin 
+                      für Politik, Wirtschaft, Gesellschaft und Kultur. 
+                      Und Sie fördern eine wirklich unabhängige vierte Gewalt als zentrale Institution unserer Demokratie.
+                    </p>
+                    <p>
+                      Falls sich unsere Buchhaltung nicht irrt, ist allerdings der 
+                      von Ihnen gewählte Abo-Beitrag in Höhe von CHF {{total}} noch ausstehend.
                     </p>
                     <p>
                       Dürfen wir Sie freundlich bitten, den Betrag in den nächsten Tagen zu überweisen?
                     </p>
-                    <p>Hier noch einmal die Zahlungsinformationen:</p>
+                    <p>Zahlungsinformationen:</p>
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
                     >
