--- a/packages/backend-modules/mail/templates/pledge_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_yearly_abo.html
@@ -42,86 +42,39 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    {{#if waiting_for_payment}}
+                    {{#if pledger_memberships_active_monthly}}
                     <p>
-                      Wir sind Ihnen sehr dankbar für Ihren grosszügigen
-                      Beitrag. Da er CHF 1000 übersteigt, können Ihr Abonnement
-                      und Ihr Zugang erst nach Zahlungseingang aktiviert werden.
-                      Sie erhalten eine Bestätigung, wenn Ihre Überweisung bei
-                      uns eingetroffen ist.
-                    </p>
-                    {{else if pledger_memberships_active_monthly}}
-                    <p>
-                      Mit Ihrem Monats-Abo haben Sie die Republik bereits
-                      kennengelernt. Dass Sie sich nun entschieden haben, uns
-                      längerfristig zu unterstützen, freut und ehrt uns.
-                      Herzlichen Dank für Ihr Vertrauen.
+                      Mit Ihrem Monats-Abo haben Sie die Republik bereits kennengelernt. 
+                      Dass Sie sich nun entschieden haben, uns längerfristig zu unterstützen, freut und ehrt uns. 
+                      Herzlichen Dank für Ihr Vertrauen!
                     </p>
                     <p>
-                      Wir werden Ihr neues Abo automatisch aktivieren, sobald
-                      die aktuelle Periode Ihres Monats-Abos ausgelaufen ist. So
-                      können Sie dann nahtlos weiterlesen (oder -hören).
+                      Wir werden Ihr neues Abo automatisch aktivieren, sobald die aktuelle
+                      Periode Ihres Monats-Abos ausgelaufen ist. So können Sie dann nahtlos
+                      weiterlesen (oder -hören).
                     </p>
                     <p>
-                      Mit dem Mitstreiterinnen-Abo erhalten Sie weiterhin von
-                      Montag bis Samstag ein hochwertiges digitales Magazin. Und
-                      Sie sorgen dafür, dass unabhängiger Journalismus eine
-                      Zukunft hat.
+                      Mit Ihrem neuen Jahresabo erhalten Sie weiterhin von Montag bis Samstag ein hochwertiges digitales Magazin. 
+                      Und Sie sorgen dafür, dass unabhängiger Journalismus eine Zukunft hat.
                     </p>
                     {{else}}
-
                     <p>
-                      Herzlich willkommen! Wir freuen uns sehr, Sie bei der
-                      Republik begrüssen zu dürfen, und bedanken uns für Ihre
-                      Unterstützung: Mit Ihrem Beitrag machen Sie unabhängigen
-                      Journalismus möglich.
-                    </p>
-
-                    <p>
-                      Und hier gleich das Wichtigste zum Start in der Übersicht:
-                    </p>
-
-                    <ul
-                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
-                    >
-                      <li>
-                        Lesen und hören Sie die Republik: Unser Magazin
-                        erscheint von Montag bis Samstag mit täglich ein bis
-                        drei neuen Beiträgen. In der
-                        <a href="{{link_app}}">Republik-App</a>, auf der
-                        <a href="{{frontend_base_url}}">Website</a> und als
-                        Newsletter – welche Newsletter und Benachrichtigungen
-                        Sie von uns erhalten, legen Sie
-                        <a href="{{link_account}}">in Ihrem Konto</a>
-                        fest.
-                      </li>
-                      <li>
-                        Diskutieren Sie mit anderen Leserinnen und der
-                        Redaktion! Auf der
-                        <a href="{{link_dialog}}">Dialog-Seite</a> sehen Sie,
-                        was aktuell bei der Republik zu reden gibt, in der
-                        <a href="{{link_etikette}}">Etikette</a> finden Sie
-                        unsere Grundsätze für einen höflichen Dialog.
-                      </li>
-                      <li>
-                        Lernen Sie unsere Crew kennen:
-                        <a href="{{link_imprint}}">Wir sind Ihr Team</a>.
-                      </li>
-                    </ul>
-
-                    <p>
-                      Haben Sie Fragen oder brauchen Sie Unterstützung? In der
-                      <a href="{{link_manual}}">Gebrauchsanleitung</a> haben wir
-                      die einzelnen Schritte zur Nutzung unseres Magazins
-                      ausgeführt (und bebildert). Bei allen weiteren Anliegen
-                      melden Sie sich gerne direkt via
-                      <a href="mailto:kontakt@republik.ch"
-                        >kontakt@republik.ch</a
-                      >
-                      bei uns.
+                      Herzlich willkommen! Wir freuen uns sehr, Sie bei der Republik begrüssen zu dürfen, 
+                      und bedanken uns für Ihre Unterstützung: 
+                      Mit Ihrem Beitrag machen Sie unabhängigen Journalismus möglich.
                     </p>
                     <p>
-                      Und nun wünschen wir Ihnen viel Freude mit der Republik.
+                      Wenn Sie zum ersten Mal hier sind, 
+                      dann zeigen wir Ihnen in den kommenden Tagen Schritt für Schritt, 
+                      wer wir sind und wie Sie das meiste aus Ihrem Abonnement herausholen können. 
+                      Falls Sie jetzt schon eine Frage haben oder Unterstützung wünschen: 
+                      In der Gebrauchsanleitung {{link_manual}} haben wir die einzelnen Schritte 
+                      zur Nutzung unseres Magazins ausgeführt (und bebildert). 
+                      Bei allen weiteren Anliegen melden Sie sich gerne direkt via 
+                      <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> bei uns.
+                    </p>
+                    <p>
+                      Und nun wünschen wir Ihnen viel Freude mit der <a href="{{frontend_base_url}}">Republik</a>.
                     </p>
                     {{/if}}
 
