--- a/packages/backend-modules/gen-backend-module/templates/package.json.hbs
+++ b/packages/backend-modules/gen-backend-module/templates/package.json.hbs
@@ -4,7 +4,7 @@
   "description": {{description}},
   {{/if}}
   {{#if author}}
-  "authors": "{{author}}",
+  "author": "{{author}}",
   {{/if}}
   "version": "0.1.0",
   "private": true,
