fix: transactional updates

--- a/packages/backend-modules/mail/templates/referral_campaign_referral_second.html
+++ b/packages/backend-modules/mail/templates/referral_campaign_referral_second.html
@@ -43,22 +43,22 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Und schon wieder hat jemand über Ihren Link ein Jahresabo bei der Republik gekauft, nämlich {{receiver}}!
+                      Eine zweite Person hat über Ihren Link ein Jahresabo bei der Republik gekauft, nämlich {{receiver}}!
                     </p>
                     <p>
-                      Damit haben Sie insgesamt {{referral_count}} Personen gefunden, die neu die Republik unterstützen. 
-                      Sie haben Talent oder Ausdauer oder beides. Jedenfalls: vielen Dank für Ihre Unterstützung.
+                      Zum Dank möchten wir am XX. April in Zürich gemeinsam mit Ihnen anstossen. 
+                      Alle Details zu Ort und Uhrzeit unseres Komplizen-Apéros schicken wir Ihnen Anfang April. 
+                      Bitte merken Sie sich das Datum schon einmal vor.
                     </p>
                     <p>
-                      Bis zum 31. März 2024 können Sie Ihren Link noch mit weiteren Bekannten teilen.
+                      Auf <a href="{{link_sender_page}}">Ihrer persönlichen Übersichtsseite</a> sehen Sie, wo wir aktuell auf dem Weg zu unserem Ziel stehen. 
+                      Dort finden Sie auch Ihren persönlichen Link. Sie können ihn noch bis zum 31. März an alle Ihre Bekannten weitergeben! 
+                      Vielleicht findet noch jemand darüber den Weg in unsere Verlagsetage? Wir drücken die Daumen und fiebern mit. 
                     </p>
                     
                     <p>Mit besten Grüssen und Dank für Ihren Einsatz</p>
 
                     <p>Ihre Crew der Republik</p>
-                    <p>
-                      Sehen wir uns im April zum Komplizen-Apéro?
-                    </p>
                   </td>
                 </tr>
                 <tr>
