fix: added missing link to transactional

--- a/packages/backend-modules/mail/templates/referral_campaign_referral_all.html
+++ b/packages/backend-modules/mail/templates/referral_campaign_referral_all.html
@@ -50,7 +50,7 @@
                       Sie haben Talent oder Ausdauer oder beides. Jedenfalls: vielen Dank für Ihre Unterstützung.
                     </p>
                     <p>
-                      Bis zum 31. März 2024 können Sie Ihren Link noch mit weiteren Bekannten teilen.
+                      Bis zum 31. März 2024 können Sie <a href="{{link_sender_page}}">Ihren Link</a> noch mit weiteren Bekannten teilen.
                     </p>
                     
                     <p>Mit besten Grüssen und Dank für Ihren Einsatz</p>
