fix(transactionals): added date of apero

--- a/packages/backend-modules/mail/templates/referral_campaign_referral_all.html
+++ b/packages/backend-modules/mail/templates/referral_campaign_referral_all.html
@@ -57,7 +57,7 @@
 
                     <p>Ihre Crew der Republik</p>
                     <p>
-                      Sehen wir uns im April zum Komplizen-Apéro?
+                      PS: Sehen wir uns am 10. April zum Komplizen-Apéro?
                     </p>
                   </td>
                 </tr>
