--- a/packages/backend-modules/mail/templates/referral_campaign_referral_second.html
+++ b/packages/backend-modules/mail/templates/referral_campaign_referral_second.html
@@ -46,7 +46,7 @@
                       Eine zweite Person hat über Ihren Link ein Jahresabo bei der Republik gekauft, nämlich {{receiver}}!
                     </p>
                     <p>
-                      Zum Dank möchten wir am XX. April in Zürich gemeinsam mit Ihnen anstossen. 
+                      Zum Dank möchten wir am 10. April in Zürich gemeinsam mit Ihnen anstossen. 
                       Alle Details zu Ort und Uhrzeit unseres Komplizen-Apéros schicken wir Ihnen Anfang April. 
                       Bitte merken Sie sich das Datum schon einmal vor.
                     </p>
