feat(goodie): add totebag_black to transactionals

--- a/packages/backend-modules/mail/templates/pledge_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_yearly_abo.html
@@ -119,7 +119,7 @@
                       2022 verschickt. {{/if}}{{#if goodies_has_mug}}Republik-Tassen 
                       liefern wir Ihnen innerhalb von 10 Werktagen. {{/if}} 
                       {{#if goodies_has_cookie}} Der Versand der Republik-Guetsliformen 
-                      erfolgt bis 22. Dezember. {{/if}}
+                      erfolgt bis 22. Dezember. {{/if}}{{#if goodies_has_totebag_black}}Schwarze Taschen liefern wir im April. {{/if}}
                     </p>
 
                     {{/if}} {{#if paymentslip}}
