fix(transactionals): small fixes

--- a/packages/backend-modules/mail/templates/pledge_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_yearly_abo.html
@@ -68,7 +68,7 @@
                       dann zeigen wir Ihnen in den kommenden Tagen Schritt für Schritt, 
                       wer wir sind und wie Sie das meiste aus Ihrem Abonnement herausholen können. 
                       Falls Sie jetzt schon eine Frage haben oder Unterstützung wünschen: 
-                      In der Gebrauchsanleitung {{link_manual}} haben wir die einzelnen Schritte 
+                      In der <a href={{link_manual}}>Gebrauchsanleitung</a> haben wir die einzelnen Schritte 
                       zur Nutzung unseres Magazins ausgeführt (und bebildert). 
                       Bei allen weiteren Anliegen melden Sie sich gerne direkt via 
                       <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a> bei uns.
