fix(transactionals): small text change

--- a/packages/backend-modules/mail/templates/referral_campaign_referral_first.html
+++ b/packages/backend-modules/mail/templates/referral_campaign_referral_first.html
@@ -58,7 +58,7 @@
                     {{else if has_monthly_abo}}
                     <p>
                       Möglich gemacht haben das: Sie. Vielen Dank, dass Sie sich für die Republik einsetzen. 
-                      Zum Dank schreiben wir Ihnen nach Ende der Kampagne CHF 20 gut auf einen künftigen Republik-Monat. 
+                      Zum Dank schreiben wir Ihnen CHF 20 auf Ihren nächsten Republik-Monat gut. 
                     </p>
                     <p>
                       Für ein Magazin, das sich über seine Leserinnen finanziert, kommt es auf jede einzelne Person an. 
