fix(htmltotxt): remove coded chars

--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_14.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_14.html
@@ -995,7 +995,7 @@
 												style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
 												width="72" height="72" mc:edit="sender_image_2">
 										</td>
-										<td id="sender" mc:edit="sender_name" style="padding-left: 12px;"><strong>Olivier Baumann &amp;<br>
+										<td id="sender" mc:edit="sender_name" style="padding-left: 12px;"><strong>Olivier Baumann &<br>
 												Lucia Herrmann</strong><br>
 											Für die Republik-Crew</td>
 									</tr>
@@ -1042,7 +1042,6 @@
 										</tr>
 									</tbody>
 								</table>
-								&nbsp;
 
 								<p dir="ltr">Bei Fragen oder wenn wir Ihnen bei einem Anliegen weiterhelfen können, melden Sie sich
 									gerne via <a href="mailto:kontakt@republik.ch">kontakt@republik.ch</a>.</p>
@@ -1075,7 +1074,7 @@
 										<td>
 											<div id="sender_bottom" mc:edit="sender_bottom_name">Herzlich<br>
 												<br>
-												<strong>Olivier Baumann &amp; Lucia Herrmann</strong><br>
+												<strong>Olivier Baumann & Lucia Herrmann</strong><br>
 												<br>
 												Für die Republik-Crew
 											</div>
