--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_21.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_21.html
@@ -995,8 +995,7 @@
                         style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
                         width="72" height="72" mc:edit="sender_image_2">
                     </td>
-                    <td id="sender" mc:edit="sender_name" style="padding-left: 12px;"><strong>Olivier Baumann
-                        &amp;&nbsp;</strong><br>
+                    <td id="sender" mc:edit="sender_name" style="padding-left: 12px;"><strong>Olivier Baumann &</strong><br>
                       <strong>Lucia Herrmann</strong><br>
                       Für die Republik-Crew
                     </td>
@@ -1011,7 +1010,8 @@
                 <p dir="ltr">Guten Tag<br>
                   <br>
                   Vielleicht haben Sie unsere letzte Nachricht übersehen, deshalb hier noch mal zur
-                  Sicherheit.&nbsp;<br>
+                  Sicherheit.
+                  <br>
                   <br>
                   Weil Sie die Republik im letzten Jahr unterstützt haben und uns aktuell fehlen, machen wir Ihnen
                   ein besonderes Angebot: Kommen Sie für nur CHF 120 zurück an Bord und lesen (oder
@@ -1040,11 +1040,10 @@
                     </tr>
                   </tbody>
                 </table>
-                &nbsp;
 
-                <p dir="ltr">Wie Sie wissen, ist für uns jede Art von Unterstützung wertvoll &ndash;&nbsp;denn
+                <p dir="ltr">Wie Sie wissen, ist für uns jede Art von Unterstützung wertvoll denn
                   wir sind werbefrei und unabhängig und finanzieren uns über die Beiträge unserer
-                  Leserinnen und Leser.&nbsp;</p>
+                  Leserinnen und Leser.</p>
 
                 <p dir="ltr">Danke für Ihre Unterstützung.</p>
                 <!-- END MODULE: BODY CONTENT-->
@@ -1076,7 +1075,7 @@
                     <td>
                       <div id="sender_bottom" mc:edit="sender_bottom_name">Herzlich<br>
                         <br>
-                        <strong>Olivier Baumann &amp; Lucia Herrmann</strong><br>
+                        <strong>Olivier Baumann & Lucia Herrmann</strong><br>
                         <br>
                         Für die Republik-Crew
                       </div>
