--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_21.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_21.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
-  xmlns:o="urn:schemas-microsoft-com:office:office">
-
+<html>
 <head>
-  <!-- This is a simple example template that you can edit to create your own custom templates -->
-
   <!--[if gte mso 15]>
     <xml>
     <o:OfficeDocumentSettings>
@@ -18,9 +13,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>*|MC:SUBJECT|*</title>
-
-
 
   <style type="text/css">
     @font-face {
@@ -952,7 +944,7 @@
                         width="100%" class="columnContainer">
                         <tr>
                           <td valign="top">
-                            <div mc:edit="preheader_leftcol_content">
+                            <div>
                               <p>Jetzt zurück zur Republik</p>
                             </div>
                           </td>
@@ -979,23 +971,23 @@
                   style="border:0;width:178px !important;height:79px !important;margin:0;max-width:100% !important"
                   alt="REPUBLIK">
                 <!-- // END MODULE: HEADER IMAGE -->
-                <table id="sender" mc:hideable style="margin-top: 48px; margin-bottom: 24px;">
+                <table id="sender" style="margin-top: 48px; margin-bottom: 24px;">
                   <tr>
                     <td>
                       <img
                         src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/d3ed83e8-5839-3998-8810-4b609547c0c3.jpeg"
                         alt="" border="0"
                         style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
-                        width="72" height="72" mc:edit="sender_image_1">
+                        width="72" height="72">
                     </td>
                     <td>
                       <img
                         src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/97ca55f6-d4d1-1990-b610-d1c539cbf117.jpeg"
                         alt="" border="0"
                         style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:72px !important;height:72px !important;margin:0;max-width:100% !important"
-                        width="72" height="72" mc:edit="sender_image_2">
+                        width="72" height="72">
                     </td>
-                    <td id="sender" mc:edit="sender_name" style="padding-left: 12px;"><strong>Olivier Baumann &</strong><br>
+                    <td id="sender" style="padding-left: 12px;"><strong>Olivier Baumann &</strong><br>
                       <strong>Lucia Herrmann</strong><br>
                       Für die Republik-Crew
                     </td>
@@ -1006,7 +998,7 @@
             <!-- // END HEADER -->
             <!-- BEGIN BODY // -->
             <tr>
-              <td valign="top" id="templateBody" mc:edit="body"><!-- BEGIN MODULE: BODY CONTENT // -->
+              <td valign="top" id="templateBody"><!-- BEGIN MODULE: BODY CONTENT // -->
                 <p dir="ltr">Guten Tag<br>
                   <br>
                   Vielleicht haben Sie unsere letzte Nachricht übersehen, deshalb hier noch mal zur
@@ -1063,17 +1055,17 @@
                         src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/d3ed83e8-5839-3998-8810-4b609547c0c3.jpeg"
                         alt="" border="0"
                         style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:80px !important;height:80px !important;margin:0;"
-                        width="72" height="72" mc:edit="sender_bottom_image_1">
+                        width="72" height="72">
                       <img
                         src="https://mcusercontent.com/650c1ec9003c7d8567eef4c5e/images/97ca55f6-d4d1-1990-b610-d1c539cbf117.jpeg"
                         alt="" border="0"
                         style="height: 72px; width: 72px; margin: 0; padding: 0;border:0;width:80px !important;height:80px !important;margin:0;"
-                        width="72" height="72" mc:edit="sender_bottom_image_2">
+                        width="72" height="72">
                     </td>
                   </tr>
                   <tr align="center">
                     <td>
-                      <div id="sender_bottom" mc:edit="sender_bottom_name">Herzlich<br>
+                      <div id="sender_bottom">Herzlich<br>
                         <br>
                         <strong>Olivier Baumann & Lucia Herrmann</strong><br>
                         <br>
@@ -1084,7 +1076,7 @@
                   <!-- // END PREFOOTER-->
                   <tr style="border-bottom: 1px solid #DADDDC">
                     <td valign="top" id="footerContent">
-                      <div mc:edit="footer_content">PS: Falls ein längerfristig angelegter Einsatz für die
+                      <div>PS: Falls ein längerfristig angelegter Einsatz für die
                         Republik im Moment einfach nicht das Richtige ist für Sie, dann erlauben Sie uns folgenden
                         Hinweis zum Schluss: Sie können die Republik für CHF 22 auch monatlich abonnieren.
                         Damit erhalten Sie Zugang zum vollen Magazin, also zu über 8000 Beiträgen. Das Abo ist
@@ -1103,13 +1095,6 @@
                   </tr>
                   <tr>
                     <td valign="top" id="utilityBar">
-                      <div mc:edit="utility_bar">
-                        <a href="*|ARCHIVE|*">Im Web lesen</a> <br> <br>
-                        Sie erhalten diese Nachricht, weil Sie sich für frühere Angebote der Republik interessiert
-                        haben. Möchten Sie keine
-                        weiteren Nachrichten über Infos und Angebote der Republik erhalten, dann können Sie sich <a
-                          href="*|UNSUB|*"> abmelden</a>.
-                      </div>
                     </td>
                   </tr>
                 </table>
