--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_24.html
@@ -1033,7 +1033,7 @@
                   </tbody>
                 </table>
 
-                <p dir="ltr">Wie Sie wissen, ist für uns jede Art von Unterstützung wertvoll denn
+                <p dir="ltr">Wie Sie wissen, ist für uns jede Art von Unterstützung wertvoll, denn
                   wir sind werbefrei und unabhängig und finanzieren uns über die Beiträge unserer
                   Leserinnen und Leser.</p>
 
