fix(mail): update text from membership_owner_feedback transactional to remove duplication with onboarding journey

--- a/packages/backend-modules/mail/templates/membership_owner_feedback.html
+++ b/packages/backend-modules/mail/templates/membership_owner_feedback.html
@@ -45,8 +45,7 @@
                     <p>Hallo {{name}}</p>
                     {{else}}
                     <p>
-                      Sehr geehrte Dame<br />
-                      Sehr geehrter Herr
+                      Guten Tag
                     </p>
                     {{/if}}
 
@@ -71,98 +70,6 @@
                       <a href="mailto:kontakt@republik.ch"
                         >kontakt@republik.ch</a
                       >.
-                    </p>
-
-                    {{#unless subscriptions_count}}
-                    <p>Möchten Sie mehr lesen, aber Sie wissen nicht, was?</p>
-                    <p>
-                      Vielleicht gefallen Ihnen als Einstieg unsere
-                      regelmässigen Formate: mittwochs unsere Gerichtskolumne
-                      «<a href="{{frontend_base_url}}/format/am-gericht"
-                        >Am Gericht</a
-                      >», am Donnerstag das Wichtigste aus dem Bundeshaus im «<a
-                        href="{{frontend_base_url}}/format/briefing-aus-bern"
-                        >Briefing aus Bern</a
-                      >» und freitags der Nachrichtenüberblick «<a
-                        href="{{frontend_base_url}}/format/was-diese-woche-wichtig-war"
-                        >Was diese Woche wichtig war</a
-                      >».
-                      <a href="{{link_account_notifications}}"
-                        >Mit der Benachrichtigungs-Funktion können Sie sich
-                        Push-Meldungen einrichten, die Sie informieren, sobald
-                        eine neue Folge erscheint</a
-                      >.
-                    </p>
-                    {{/unless}}
-
-                    <p>
-                      Sind Sie viel unterwegs, oder lesen Sie ungern mit dem
-                      Laptop auf dem Schoss? Dann installieren Sie die
-                      Republik-App für
-                      <a
-                        href="https://apps.apple.com/ch/app/republik/id1392772910"
-                        >iOS</a
-                      >
-                      oder
-                      <a
-                        href="https://play.google.com/store/apps/details?id=app.republik&amp;hl=de_CH"
-                        >Android</a
-                      >.
-                    </p>
-
-                    {{#unless grants_count}}
-                    <p>
-                      Oder haben Sie neugierige Freundinnen und Bekannte, denen
-                      Sie gerne einen Probezugriff auf die Republik ermöglichen
-                      würden?
-                      <a href="{{link_account_share}}"
-                        >Sie können ihnen drei Wochen Probelesen schenken</a
-                      >.
-                    </p>
-                    {{/unless}}
-
-                    <p>
-                      Ausserdem gibt es für jeden Beitrag einige hilfreiche
-                      Funktionen, die wir Ihnen ans Herz legen wollen:
-                    </p>
-
-                    <ul
-                      style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
-                    >
-                      <li>
-                        <a href="{{link_bookmarks}}"
-                          >Sie können im Beitrag ein Lesezeichen setzen, um ihn
-                          später zu lesen.</a
-                        >
-                      </li>
-                      <li>
-                        Sie können Ihre Leseposition pro Beitrag speichern, um
-                        später weiterzulesen –
-                        <a href="{{link_account_progress}}"
-                          >dies müssen Sie zuerst in Ihrem Konto freigeben</a
-                        >.
-                      </li>
-                      <li>
-                        Und Sie können jeden Beitrag als PDF herunterladen.
-                      </li>
-                    </ul>
-
-                    <p>
-                      Wenn Sie noch mehr über die Republik, die Geschichte und
-                      die Leute dahinter wissen wollen, finden Sie hier mehr
-                      Informationen zu
-                      <a href="{{link_about}}">Aufbau und Team</a>, zu
-                      <a href="{{link_publisher}}">Verlag und Genossenschaft</a>
-                      und zu unseren <a href="{{link_cockpit}}">Zahlen</a>.
-                    </p>
-
-                    <p>
-                      Wir hoffen, dass wir Ihnen einige hilfreiche Hinweise
-                      geben konnten, und würden uns sehr freuen, Sie demnächst
-                      im Dialog begrüssen zu dürfen. Und da es auch möglich ist,
-                      dass Sie einfach nur lesen und sonst gar nichts wollen,
-                      lassen wir Sie nun auch wieder in Ruhe. Schön, dass Sie da
-                      sind!
                     </p>
 
                     <p>Herzlich</p>
