feat: replace "Mitstreiter-Abo" with "Abo" in transactionals

--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_notice_0.html
@@ -50,8 +50,7 @@
                     </p>
                     <p>
                       Die nicht so gute Nachricht: In wenigen Stunden schon
-                      könnte unsere gemeinsame Reise enden. Ihr Mitstreiter-Abo
-                      läuft aus.
+                      könnte unsere gemeinsame Reise enden. Ihr Abo läuft aus.
                     </p>
                     <p>Wie es jetzt weitergeht? Sie haben es in der Hand:</p>
                     <table
