--- a/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
+++ b/packages/backend-modules/mail/templates/membership_owner_prolong_yearly_abo_winback_7.html
@@ -49,7 +49,7 @@
                     <p>
                       Das bedeutet: Am {{grace_end_date}} verlieren Ihre
                       Zugangsdaten für das Republik-Magazin ihre Gültigkeit, da
-                      Ihr Mitstreiter-Abo ausgelaufen ist.
+                      Ihr Abo ausgelaufen ist.
                     </p>
                     <p>
                       Aber keine Sorge, so weit muss es nicht kommen. Sie können
