--- a/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_last_yearly_abo.html
@@ -43,12 +43,13 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Journalismus lebt nicht nur von Worten, sondern auch von Taten: Handeln Sie jetzt und zahlen Sie Ihren ausstehenden Abo-Beitrag. 
-                      Falls sich unsere Buchhaltung nicht irrt, ist der von Ihnen gewählte Beitrag in Höhe von CHF {{total}} nämlich weiterhin ausstehend.
+                      Journalismus lebt nicht nur von Worten, sondern auch von
+                      Taten: Handeln Sie jetzt und zahlen Sie Ihren ausstehenden
+                      Abo-Beitrag. Falls sich unsere Buchhaltung nicht irrt, ist
+                      der Beitrag in Höhe von CHF {{total}} nämlich weiterhin
+                      ausstehend.
                     </p>
-                    <p>
-                      Unser Projekt ist auf Ihren Beitrag angewiesen.
-                    </p>
+                    <p>Unser Projekt ist auf Ihren Beitrag angewiesen.</p>
                     <p>Zahlungsinformationen:</p>
                     <ul
                       style="color:#282828;font-size:17px;line-height:24px;{{sg_font_style_sans_serif_regular}}"
@@ -72,8 +73,9 @@
                       >.
                     </p>
                     <p>
-                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht erhalten, gehen wir davon aus, dass Sie die Republik 
-                      nicht mehr lesen möchten, und deaktivieren Ihr Abo.
+                      Wenn wir Ihre Zahlung in den nächsten 30 Tagen nicht
+                      erhalten, gehen wir davon aus, dass Sie die Republik nicht
+                      mehr lesen möchten, und deaktivieren Ihr Abo.
                     </p>
                     <p>Herzlich<br />Ihre Crew der Republik</p>
                   </td>
