--- a/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
+++ b/packages/backend-modules/mail/templates/payment_reminder_yearly_abo.html
@@ -42,19 +42,24 @@
                 <tr>
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
-                    <p>Wir freuen uns sehr, dass Sie die Republik unterstützen möchten.</p>
                     <p>
-                      Mit Ihrem neuen Abo erhalten Sie sechsmal pro Woche ein 
-                      unabhängiges und werbefreies digitales Magazin 
-                      für Politik, Wirtschaft, Gesellschaft und Kultur. 
-                      Und Sie fördern eine wirklich unabhängige vierte Gewalt als zentrale Institution unserer Demokratie.
+                      Wir freuen uns sehr, dass Sie die Republik unterstützen
+                      möchten.
                     </p>
                     <p>
-                      Falls sich unsere Buchhaltung nicht irrt, ist allerdings der 
-                      von Ihnen gewählte Abo-Beitrag in Höhe von CHF {{total}} noch ausstehend.
+                      Mit Ihrem neuen Abo erhalten Sie sechsmal pro Woche ein
+                      unabhängiges und werbefreies digitales Magazin für
+                      Politik, Wirtschaft, Gesellschaft und Kultur. Und Sie
+                      fördern eine wirklich unabhängige vierte Gewalt als
+                      zentrale Institution unserer Demokratie.
                     </p>
                     <p>
-                      Dürfen wir Sie freundlich bitten, den Betrag in den nächsten Tagen zu überweisen?
+                      Falls sich unsere Buchhaltung nicht irrt, ist allerdings
+                      der Abo-Beitrag in Höhe von CHF {{total}} noch ausstehend.
+                    </p>
+                    <p>
+                      Dürfen wir Sie freundlich bitten, den Betrag in den
+                      nächsten Tagen zu überweisen?
                     </p>
                     <p>Zahlungsinformationen:</p>
                     <ul
