fix(lobbywatch): remove Angeli and Hostettler

--- a/packages/backend-modules/mail/templates/de/donation_receipt.html
+++ b/packages/backend-modules/mail/templates/de/donation_receipt.html
@@ -117,9 +117,7 @@
                     </p>
 
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli und Otto Hostettler<br />
-                      Co-Präsidenten
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
