--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_notice.html
@@ -109,9 +109,7 @@
                       für mehr Transparenz in der Politik engagieren.
                     </p>
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-Präsidenten Lobbywatch
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
