--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_missed.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_missed.html
@@ -171,9 +171,7 @@
                       schon heute.
                     </p>
                     <p>
-                      Herzliche Grüsse<br />
-                      Otto Hostettler & Thomas Angeli<br />
-                      Co-Präsidenten Lobbywatch
+                      Herzliche Grüsse
                     </p>
                   </td>
                 </tr>
