--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_overdue.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_overdue.html
@@ -155,9 +155,7 @@
                       Engagement und Ihr Vertrauen!
                     </p>
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-Präsidenten Lobbywatch
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
