--- a/packages/backend-modules/mail/templates/fr/donation_receipt.html
+++ b/packages/backend-modules/mail/templates/fr/donation_receipt.html
@@ -119,9 +119,7 @@
                     </p>
 
                     <p>
-                      Avec nos meilleures salutations<br />
-                      Thomas Angeli et Otto Hostettler<br />
-                      Co-présidents
+                      Avec nos meilleures salutations
                     </p>
                   </td>
                 </tr>
