--- a/packages/backend-modules/mail/templates/fr/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_autopay_failed.html
@@ -157,9 +157,7 @@
                     </p>
                     {{/if}}
                     <p>
-                      Avec nos meilleures salutations<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-présidents Lobbywatch
+                      Avec nos meilleures salutations
                     </p>
                   </td>
                 </tr>
