--- a/packages/backend-modules/mail/templates/fr/membership_owner_autopay_notice.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_autopay_notice.html
@@ -109,9 +109,7 @@
                       plus grande transparence dans la politique.
                     </p>
                     <p>
-                      Avec nos meilleures salutations<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-présidents de Lobbywatch
+                      Avec nos meilleures salutations
                     </p>
                   </td>
                 </tr>
