--- a/packages/backend-modules/mail/templates/fr/membership_owner_autopay_successful.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_autopay_successful.html
@@ -85,9 +85,7 @@
                       {{prolonged_end_date}}.
                     </p>
                     <p>
-                      Avec nos meilleures salutations<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-présidents de Lobbywatch
+                      Avec nos meilleures salutations
                     </p>
                   </td>
                 </tr>
