--- a/packages/backend-modules/mail/templates/fr/membership_owner_prolong_missed.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_prolong_missed.html
@@ -139,9 +139,7 @@
                       remercions d'ores et déjà.
                     </p>
                     <p>
-                      Cordiales salutations<br />
-                      Otto Hostettler & Thomas Angeli<br />
-                      Co-présidents de Lobbywatch
+                      Cordiales salutations
                     </p>
                   </td>
                 </tr>
