--- a/packages/backend-modules/mail/templates/fr/membership_owner_prolong_overdue.html
+++ b/packages/backend-modules/mail/templates/fr/membership_owner_prolong_overdue.html
@@ -157,9 +157,7 @@
                       votre engagement et de votre confiance !
                     </p>
                     <p>
-                      Avec nos meilleures salutations<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-présidents de Lobbywatch
+                      Avec nos meilleures salutations
                     </p>
                   </td>
                 </tr>
