--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_failed.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_failed.html
@@ -154,9 +154,7 @@
                     </p>
                     {{/if}}
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-Präsidenten Lobbywatch
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
