--- a/packages/backend-modules/mail/templates/de/membership_owner_autopay_successful.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_autopay_successful.html
@@ -85,9 +85,7 @@
                       {{prolonged_end_date}}.
                     </p>
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-Präsidenten Lobbywatch
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
