--- a/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
+++ b/packages/backend-modules/mail/templates/de/membership_owner_prolong_notice.html
@@ -157,9 +157,7 @@
                       Engagement und Ihr Vertrauen!
                     </p>
                     <p>
-                      Mit freundlichen Grüssen<br />
-                      Thomas Angeli & Otto Hostettler<br />
-                      Co-Präsidenten Lobbywatch
+                      Mit freundlichen Grüssen
                     </p>
                   </td>
                 </tr>
