--- a/packages/backend-modules/mail/templates/pledge_monthly_abo.html
+++ b/packages/backend-modules/mail/templates/pledge_monthly_abo.html
@@ -43,12 +43,16 @@
                   <td style="padding: 20px">
                     <p>Guten Tag</p>
                     <p>
-                      Wir freuen uns sehr, dass Sie sich für ein Republik Monats-Abo 
+                      Wir freuen uns sehr, dass Sie sich für ein Republik Monats-Abo
                       entschieden haben.
                     </p>
                     <p>
-                      Die von Ihnen angegebene Kreditkarte belasten wir
-                      monatlich mit CHF 22.–. Unter
+                      Das Monats-Abo verlängert sich automatisch jeweils um einen weiteren Monat.
+                      Die von Ihnen angegebene Kreditkarte belasten wir dementsprechend ab Beginn der
+                      ersten Verlängerungsperiode monatlich mit CHF 22.-.
+                    </p>
+                    <p>
+                      Unter
                       <a href="{{link_account_goto}}">Konto</a> finden Sie Ihre
                       <a href="{{link_account_abos_goto}}"
                         >persönliche Übersicht zu Ihrem Abonnement</a
